@@ -1,5 +1,8 @@
 2016-07-01 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #41827: enableAdminNotifyOnUpdate=1 produces wrong dmailCategories values in E-Mail
+	* Fix bug #44151: ###BACK_URL### not working, looses Parameters and possible wrong character encoding
+	* Fix bug #41321: Clicking cancel on the account deletion confirmation pages causes a 404 error with internet explorer
+	* Fix bug #46429: Empty Form after cancelling delete Form
 
 2016-06-29 Stanislas Rolland  <typo3(arobas)sjbr.ca>
 	* Fix bug #46080: BE log error after change PHP5.2 -> PHP5.3
